# fastcape

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_cape.py
src/fastcape/: __init__.py  _constants.py  _numba_core.py  _thermo.py  cape.py
tests/: conftest.py  test_cape.py  test_numba_core.py  test_thermo.py
