[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastcape"
version = "0.1.0"
description = "Fast CAPE/CIN calculations with Numba for gridded data"
requires-python = ">=3.11"
dependencies = [
    "numba>=0.60",
    "numpy",
    "xarray",
    "dask",
    "scipy",
]

[project.optional-dependencies]
test = ["pytest", "metpy>=1.7"]
bench = ["metpy>=1.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/fastcape"]
